@@ -41,11 +41,11 @@ static char *code_name[] = {
     "label",
     "prolog",
     "addr",		"addi",
-    "addxr",		"addxi",
     "addcr",		"addci",
+    "addxr",		"addxi",
     "subr",		"subi",
-    "subxr",		"subxi",
     "subcr",		"subci",
+    "subxr",		"subxi",
     "mulr",		"muli",
     "divr",		"divi",
     "divr_u",		"divi_u",
